# wui-rs

./: Cargo.toml  README.md  justfile
crates/tedst/: Cargo.toml
crates/tedst/examples/: bar.rs
crates/tedst/src/: orchestrator.rs  view.rs
crates/tedst/src/orchestrator/: keyboard.rs  layer.rs  pointer.rs
crates/wui-renderer/: Cargo.toml
crates/wui-rs/: Cargo.toml
crates/wui-rs/examples/: application.rs  bar.rs  basic.rs  orchestrator.rs
crates/wui-rs/src/: application.rs  element.rs  lib.rs  orchestrator.rs  task.rs  view.rs
crates/wui-rs/src/application/: channel.rs  handler.rs  inner.rs  wayland.rs
crates/wui-rs/src/application/handler/: close.rs  create.rs  distribute.rs
crates/wui-rs/src/application/wayland/: compositor.rs  keyboard.rs  layer.rs  output.rs  pointer.rs  seat.rs  window.rs
crates/wui-rs/src/element/: rect.rs  view.rs
crates/wui-rs/src/element/view/: configure.rs
crates/wui-rs/src/orchestrator/: channel.rs  compositor.rs  handler.rs  keyboard.rs  layer.rs  pointer.rs  seat.rs  views.rs  wayland.rs  wgpu.rs  window.rs
crates/wui-rs/src/orchestrator/handler/: attach_child.rs  close_view.rs  create_view.rs  garbage.rs  start_caching.rs
crates/wui-rs/src/orchestrator/wayland/: compositor.rs  keyboard.rs  layer.rs  window.rs
crates/wui-rs/src/view/: config.rs  configure.rs
crates/wui-view/: Cargo.toml
crates/wui-view/examples/: orchestrator.rs
crates/wui-view/src/: orchestrator.rs  view.rs
crates/wui-view/src/orchestrator/: channel.rs  handler.rs  wayland.rs  wgpu.rs
crates/wui-view/src/orchestrator/handler/: close_view.rs  create_view.rs  forward_event.rs
crates/wui-view/src/orchestrator/wayland/: compositor.rs  layer.rs  output.rs  pointer.rs  seat.rs  window.rs
examples/: bar.rs  bars.rs  basic.rs  flex.rs  menu.rs  window.rs  wlwgpu.rs
src/: application.rs  common.rs  element.rs  event.rs  lib.rs  message.rs  mvc.rs  renderer.rs  task.rs  update.rs  view.rs  wayland.rs  widget.rs  widgets.rs  wlwgpu.rs
src/application/: backend.rs  command.rs  pool.rs  task.rs  view.rs  wayland.rs
src/application/backend/handler/: compositor.rs  keyboard.rs  layershell.rs  mod.rs  output.rs  pointer.rs  seat.rs
src/application/pool/: task.rs
src/application/wayland/: compositor.rs  keyboard.rs  output.rs  pointer.rs  seat.rs  shell.rs
src/common/: channel.rs  map.rs
src/element/: button.rs  container.rs  square.rs  text.rs
src/mvc/: application.rs  event.rs  pool.rs  task.rs  widget.rs
src/mvc/widget/: container.rs  empty.rs  map.rs
src/wayland/: backend.rs  client.rs  event.rs  surface.rs  widgets.rs
src/wayland/client/: compositor.rs  keyboard.rs  layer.rs  output.rs  pointer.rs  seat.rs  window.rs
src/widget/: root.rs  std.rs  surface.rs  util.rs
src/widget/std/: circle.rs  container.rs  follower.rs  keyboard.rs  mouse.rs  row.rs  square.rs  text.rs
src/widgets/: root.rs  std.rs  widget.rs  wlwgpu.rs
src/widgets/std/: follower.rs
src/wlwgpu/: client.rs  event.rs  event_loop.rs  scene.rs  shell.rs  surface.rs  wgpu.rs  wl.rs
src/wlwgpu/client/: compositor.rs  keyboard.rs  layer.rs  output.rs  pointer.rs  seat.rs  window.rs
src/wlwgpu/surface/: builder.rs  handle.rs  wl.rs
