[package]
description = "Wayland User Interface framework with an MVC architecture."
keywords = ["Wayland", "Graphics", "UI", "Elm", "GUI", "Rust", "MVC"]
documentation = "https://github.com/Hennzau/wui-rs"
categories = ["gui", "graphics", "wayland", "mvc"]
repository = "https://github.com/Hennzau/wui-rs"
authors = ["Enzo Le Van <dev@enzo-le-van.fr>"]
homepage = "https://github.com/Hennzau/wui-rs"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2024"
name = "wui-rs"

[dependencies]
eyre = { version = "0.6.0", default-features = false, features = [
    "auto-install",
] }

tracing = { version = "0.1.41", default-features = false, features = ["std"] }

pollster = { version = "0.4.0", default-features = false }

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }

winit = { git = "https://github.com/SergioRibera/winit/", branch = "layer_shell", default-features = false, features = [
    "wayland",
] }

vello = { version = "0.5.0", default-features = false, features = ["wgpu"] }
parley = "0.5.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
