[package]
name = "wui-rs"
authors = ["Enzo Le Van <dev@enzo-le-van.fr>"]
edition = "2024"
homepage = "https://github.com/Hennzau/wui-rs"
keywords = ["Wayland", "Graphics", "UI", "Elm", "GUI", "Rust", "MVC"]
categories = []
description = "Wayland User Interface framework on top of Xilem"
documentation = "https://github.com/Hennzau/wui-rs"
license = "Apache-2.0"
repository = "https://github.com/Hennzau/wui-rs"
version = "0.1.0"
readme = "README.md"

[dependencies]
tracing = "0.1.41"

xilem = { git = "https://github.com/Hennzau/xilem", version = "0.3.0" }
winit = { git = "https://github.com/Hennzau/winit", version = "0.30.12" }

[dev-dependencies]
tracing-subscriber = "0.3"
chrono = "0.4"
