[package]
name = "wui-rs"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eyre = { workspace = true }
wgpu = { workspace = true }
tokio = { workspace = true }

raw-window-handle = { workspace = true }

smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
wayland-backend = { workspace = true }
